# diryaviy-shifer

./: README.md
diryaviy_shifer_2020/: CMakeLists.txt  package.xml
diryaviy_shifer_camera/: CMakeLists.txt  package.xml  setup.py
diryaviy_shifer_camera/cfg/: ImageCompensationParams.cfg  ImageProjectionParams.cfg
diryaviy_shifer_camera/launch/: extrinsic_camera_calibration.launch
diryaviy_shifer_camera/nodes/: image_compensation  image_projection
diryaviy_shifer_core/: CMakeLists.txt  package.xml  setup.py
diryaviy_shifer_core/launch/: autorace_core.launch  diryaviy_shifer_core.launch  diryaviy_shifer_mission.launch
diryaviy_shifer_core/nodes/: construction_core_node_controller  core_mode_decider  core_node_controller  core_node_mission  intersection_core_mode_decider  intersection_core_node_controller  level_crossing_core_node_controller  parking_core_node_controller  traffic_light_core_mode_decider  traffic_light_core_node_controller  tunnel_core_node_controller
diryaviy_shifer_detect/: CMakeLists.txt  package.xml  setup.py
diryaviy_shifer_detect/cfg/: DetectLaneParams.cfg  DetectLevelParams.cfg  DetectTrafficLightParams.cfg
diryaviy_shifer_detect/launch/: detect_construction.launch  detect_intersection.launch  detect_lane.launch  detect_level_crossing.launch  detect_parking.launch  detect_sign.launch  detect_traffic_light.launch  detect_tunnel.launch
diryaviy_shifer_detect/nodes/: detect_construction  detect_construction_sign  (+10 more)
diryaviy_shifer_driving/: CMakeLists.txt  package.xml  setup.py
diryaviy_shifer_msgs/: CMakeLists.txt  package.xml
(+25 files in other folders)
